<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380sp"
    android:layout_height="500sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/settings_title"
        android:padding="10sp"
        android:textSize="32sp"/>


    <EditText
        android:id="@+id/settings_ftp_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:width="300sp"
        android:ems="10"
        android:hint="@string/settings_ftp_address"
        android:autofillHints="true"
        android:inputType="text" />

    <EditText
        android:id="@+id/settings_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:width="150sp"
        android:ems="10"
        android:hint="@string/settings_username"
        android:autofillHints="true"
        android:inputType="text" />


    <EditText
        android:id="@+id/settings_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:width="150sp"
        android:ems="10"
        android:hint="@string/settings_password"
        android:autofillHints="true"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/settings_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:width="150sp"
        android:text="@string/settings_ok" />

    <Button
        android:id="@+id/settings_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:width="150sp"
        android:onClick="settingsButtonClick"
        android:text="@string/settings_cancel" />

    <TextView
        android:id="@+id/settings_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/info"
        android:layout_margin="32sp"
        android:padding="4sp"
        android:color="@color/green"
        android:background="@drawable/image_border"
        android:textSize="16sp"/>


</LinearLayout>